refactor createAlbum